--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,5 +31,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "test": "jest",
+  "devDependencies": {
+    "faker": "^4.1.0",
+    "jest": "^24.9.0",
+    "jest-cli": "^24.9.0",
+    "puppeteer": "^2.0.0"
+  },
+  "jest":{
   }
 }
